--- a/poem.css
+++ b/poem.css
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 body {
-  text-align: center;
-  background-color: black;
-  color: white;
+  font-align: center;
+  background-color: rgb( 0, 0, 0);
+  color: rgb( 255, 255, 255);
 }
   
