--- a/poem.css
+++ b/poem.css
@@ -1,6 +1,9 @@
 
 body {
-  background-color: rgb( 33, 0, 94);
+  background-color: rgb( 0, 0, 0);
   color: rgb( 255, 255, 255);
+}
+p { 
+  text-align: center;
 }
   
