--- a/poem.css
+++ b/poem.css
@@ -4,7 +4,7 @@ body {
   color: rgb( 255, 255, 255);
 }
 p { 
-  margin-left: 50px;
+  text-align: center;
   font-family: Helvetica, sans-serif;
   padding: 10px;
   line-height: 1.1;
