--- a/poem.css
+++ b/poem.css
@@ -42,19 +42,19 @@ h3 {
   width: 45%;
   float: left;
   padding: 10px;
-  border: 1px dashed white;
+  border: 2px dashed white;
 }
 #divRight {
   width: 25%;
   padding: 5px;
   float: right;
   margin-right: 250px;
-  border: 1px dashed white;
+  border: 2px dashed white;
 }
 .portrait {
-  border: 1px solid white;
+  border: 2px solid white;
   padding: 5px;
-  float: center;
+  text-align: center;
 }
 
 
